--- a/06currencyConvertor/package.json
+++ b/06currencyConvertor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05password-generator",
+  "name": "currency-convertor",
   "private": true,
   "version": "0.0.0",
   "type": "module",
